# cpp-high-performance-guide

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: benchmark.yml  build.yml  sanitizers.yml
.kiro/specs/hpc-optimization-guide/: design.md  requirements.md  tasks.md
benchmarks/: CMakeLists.txt
benchmarks/common/: benchmark_utils.hpp
changelog/: 2026-01-09.md
cmake/: CompilerOptions.cmake  Dependencies.cmake  ExampleTemplate.cmake  Sanitizers.cmake
docs/: learning-path.md  profiling-guide.md
examples/: CMakeLists.txt
examples/01-cmake-modern/: CMakeLists.txt  README.md
examples/01-cmake-modern/anti-patterns/: CMakeLists.txt
examples/01-cmake-modern/best-practices/: CMakeLists.txt
examples/01-cmake-modern/best-practices/include/: library.hpp
examples/01-cmake-modern/best-practices/src/: library.cpp  main.cpp
examples/02-memory-cache/: CMakeLists.txt  README.md
examples/02-memory-cache/bench/: alignment_bench.cpp  aos_soa_bench.cpp  false_sharing_bench.cpp  prefetch_bench.cpp
examples/02-memory-cache/include/: memory_utils.hpp
examples/02-memory-cache/src/: alignment.cpp  aos_vs_soa.cpp  false_sharing.cpp  prefetch.cpp
examples/03-modern-cpp/: CMakeLists.txt  README.md
examples/03-modern-cpp/bench/: move_semantics_bench.cpp  ranges_bench.cpp  vector_reserve_bench.cpp
examples/03-modern-cpp/src/: compile_time.cpp  move_semantics.cpp  ranges_vs_loops.cpp  vector_reserve.cpp
examples/04-simd-vectorization/: CMakeLists.txt  README.md
examples/04-simd-vectorization/bench/: simd_bench.cpp
examples/04-simd-vectorization/include/: simd_utils.hpp  simd_wrapper.hpp
examples/04-simd-vectorization/src/: auto_vectorize.cpp  intrinsics_intro.cpp
examples/05-concurrency/: CMakeLists.txt  README.md
examples/05-concurrency/bench/: atomic_bench.cpp  openmp_bench.cpp
examples/05-concurrency/include/: concurrency_utils.hpp
examples/05-concurrency/src/: atomic_ordering.cpp  lock_free_queue.cpp  openmp_basics.cpp
tests/: CMakeLists.txt
tests/integration/: build_system_test.py
tests/property/: CMakeLists.txt  benchmark_properties.cpp  concurrency_properties.cpp  memory_properties.cpp  simd_properties.cpp
tests/unit/: CMakeLists.txt
tests/unit/concurrency/: CMakeLists.txt
tests/unit/memory/: CMakeLists.txt
tests/unit/simd/: CMakeLists.txt
tools/analysis/: benchmark_compare.py
tools/flamegraph/: generate_flamegraph.sh
